force-app/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <label>Warehouse</label>
    <pluralLabel>Warehouses</pluralLabel>
    <nameField>
        <label>Warehouse Number</label>
        <type>AutoNumber</type>
        <displayFormat>WA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>