force-app/main/default/objects/Warehouse__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>