force-app/main/default/objects/Warehouse__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>